# phylo_ml

./: .gitignore  CONFIG.md  README.md  pyproject.toml  requirements.txt
sample_config/: training.json  training.yaml
scripts/: overfit_check.py  verify.py
src/: __init__.py
src/cnn/: __init__.py  __main__.py  config.py  hardcoded_model.py  model.py  train.py  trainer.py
src/configuration/: __init__.py  training.py
src/gnn/: PhyloGNN_Guide.md  __init__.py  __main__.py  baseline.py  data.py  model.py  simulate.py  step_through.py  train.py
src/kan/: __init__.py  __main__.py  trainer.py
src/updated_cnn/: __init__.py  __main__.py  config.py  model.py  train.py
src/utils/: formatting.py
tests/: README.md  test_model.py  test_train.py
